# copier-templates-extensions

./: .copier-answers.yml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: covindex.html  index.html  src_copier_templates_extensions_extensions___init___py.html  src_copier_templates_extensions_extensions_context_py.html  src_copier_templates_extensions_extensions_loader_py.html  status.json
credits/: index.html
docs/: credits.md  macros.py
docs/.overrides/partials/: comments.html
docs/reference/: api.md  cli.md  extensions.md
license/: index.html
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/extensions/: index.html
reference/extensions/__init__/: index.html
reference/extensions/context/: index.html
reference/extensions/loader/: index.html
scripts/: gen_credits.py  make.py  multirun.sh  setup.sh
search/: search_index.json
src/copier_template_extensions/: __init__.py
src/copier_template_extensions/_internal/: context.py  debug.py  loader.py
src/copier_templates_extensions/: __init__.py  _extension.py  debug.py
src/copier_templates_extensions/_internal/: context.py  debug.py  loader.py
src/copier_templates_extensions/extensions/: __init__.py  context.py  context_hook.py  loader.py  relative_path.py
tests/: __init__.py  test_api.py  test_cli.py  test_extensions.py
tests/fixtures/answer_access/: copier.yml  extensions.py  result.txt.jinja
tests/fixtures/cant_find_extension_class/: copier.yml
tests/fixtures/cant_find_extension_file/: copier.yml
tests/fixtures/cant_find_extension_module/: copier.yml
tests/fixtures/cant_find_extension_package/: copier.yml
tests/fixtures/dataclass/: copier.yml
tests/fixtures/dataclass/extensions/: ctx.py
tests/fixtures/deprecation_warning_hook_return/: extensions.py
tests/fixtures/deprecation_warning_update_attr/: copier.yml  extensions.py
tests/fixtures/loading_normal_extension/: copier.yml
tests/fixtures/modifying_context/: extensions.py
tests/fixtures/not_updating_context_for_prompts/: copier.yml  extensions.py
tests/fixtures/not_using_loader/: result.txt.jinja
tests/fixtures/raising_exception_while_loading/: copier.yml  extensions.py
tests/fixtures/update_project/: copier.yml  extensions.py  result.txt.jinja
tests/fixtures/updating_context/: copier.yml  extensions.py
tests/fixtures/using_loader/: copier.yml  extensions.py
