[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "copier-templates-extensions"
description = "Special Jinja2 extension for Copier that allows to load extensions using file paths relative to the template root instead of Python dotted paths."
authors = [{name = "Timothée Mazzucotelli", email = "pawamoy@pm.me"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["copier", "templates", "extension"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "copier>=6",
]

[project.urls]
Homepage = "https://github.com/copier-org/copier-templates-extensions"
Documentation = "https://github.com/copier-org/copier-templates-extensions"
Changelog = "https://github.com/copier-org/copier-templates-extensions/blob/main/CHANGELOG.md"
Repository = "https://github.com/copier-org/copier-templates-extensions"
Issues = "https://github.com/copier-org/copier-templates-extensions/issues"
Discussions = "https://github.com/copier-org/copier-templates-extensions/discussions"
Funding = "https://github.com/sponsors/pawamoy"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
